--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,22 @@ To be released
 	  to improve icon quality in 3-pane wide view. Also add
 	  favicon URL discovery tests.
 
+	* Add Readability.js library (Apache 2.0 licensed)
+	  and auto-apply Readability.js to all headlines
+	  (Lars Windolf)
+
+	* Drop unused glade/google_source.ui
+	  (Lars Windolf)
+
+	* Drop support of combined view mode, this is necessary
+	  to add rich content support which relies on DOM
+	  transformation and Readability.js
+	  (Lars Windolf)
+
+	* Drop ns_photo support, as it is rarely used and
+	  allows us to get rid of XSLT extra handling
+	  (Lars Windolf)
+
 	* Fixes #799: plugins/headerbar.py translations not active
 	  (reported by Paul Gevers)
 
@@ -30,11 +46,9 @@ To be released
 	  (Leiaz)
 	* #680: Add xdg-email command to item list popup menu
 	  (poetsmeniet)
-
 	* Drop unused glade/google_source.ui
 	* #699: Refactoring of duplicate check handlingg
 	  (dymoksc)
-
 	* #746: Fix accessibility fatals reported by gla11y
 	  (reported by Paul Gevers)
 	* Fixes #730: "Update all subscriptions at startup" overrides
@@ -47,6 +61,8 @@ To be released
 	  (madmurphy)
 	* #745: URL fix for French example feeds
 	  (sblondon)
+
+	* Update inline docs on headline view modes
 
 
 2019-12-04   Lars Windolf <lars.windolf@gmx.de>
